--- a/web01.yaml
+++ b/web01.yaml
@@ -5,7 +5,7 @@ apiVersion: v1      # apiVersion: this is the version of the API used by the clu
 kind: Pod           
                     
 metadata:           # Metadata: here we can define data about the object we are about to create.
-  name: webserver   # In this example, we only provide the name of the pod. But you can provide other details like the namespace.
+  name: webserver01   # In this example, we only provide the name of the pod. But you can provide other details like the namespace.
   labels:
     app: web01
 spec:               #The spec part defines the characteristics that a given Kubernetes object should have. 
